bgfix- fixed nav bug on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,12 +25,19 @@ body {
 h1 {
   font-family: "Fira Sans", sans-serif;
   font-size: 3em;
-  margin: 2em 1rem;
+  margin: 3em 0.5rem 0em;
+}
+
+h2 {
+  border-bottom: 1px solid #cc1;
+  font-family: "Oxygen", Sans-Serif;
+  font-size: 2em;
+  color: #fff;
 }
 
 h3 {
-  font-size: 1.5em;
-  margin: 0.5em 3em;
+  font-size: 1em;
+  margin: 0em 0.5em 1em;
   font-weight: 500;
 }
 
@@ -39,13 +46,15 @@ h3 {
     font-size: 7em;
     margin: 2em 4rem 0em;
   }
-}
+  h2 {
+    font-size: 3em;
+  }
 
-h2 {
-  border-bottom: 1px solid #cc1;
-  font-family: "Oxygen", Sans-Serif;
-  font-size: 3em;
-  color: #fff;
+  h3 {
+    font-size: 1.5em;
+    margin: 0em 4em 1em;
+    font-weight: 500;
+  }
 }
 
 p {
@@ -72,17 +81,18 @@ section {
 
 /* Navigation Styles*/
 .navbar__menu ul {
-  padding-left: 0;
   margin: 0;
-  text-align: right;
+  padding-left: 0;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .navbar__menu li {
   display: inline-block;
+  font-size: 0.7em;
 }
 
 .navbar__menu .menu__link {
-  display: block;
   padding: 1em;
   font-weight: bold;
   text-decoration: none;
@@ -99,6 +109,10 @@ section {
   .navbar__menu ul {
     display: flex;
     justify-content: right;
+  }
+
+  .navbar__menu li {
+    font-size: 1em;
   }
 }
 
